# RM-Task02

./: CMakeLists.txt  README.md
src/: main.cpp
src/源代码/: 10、灰度化.c++  11、二值化..c++  12、膨胀.c++  13、腐蚀.c++  14、漫水处理.c++  15、绘制任意圆形方形和文字.c++  16、绘制红色的外轮廓.c++  17、绘制红色的 bounding box.c++  18、图像旋转35度.c++  19|图像裁剪为原图的左上角的四分之一.c++  1、转化为灰度图.c++  2、转化为 HSV 图片.c++  3、应用均值滤波.c++  4、应用高斯滤波.c++  5、寻找图像中红色的外轮廓.c++  6、HSV 方法.c++  7、寻找图像中红色的 bounding box.c++  8、计算轮廓的面积.c++  9、提取高亮红色区域.c++
